# Rust-Audio-Slicer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: audio.rs  main.rs  slicer.rs
