[package]
edition = "2024"
name = "audio-learning"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
hound = "3.5"
indicatif = "0.17"
num_cpus = "1.16"
rayon = "1.7"
symphonia = {version = "0.5", features = ["all"]}
tokio = {version = "1.0", features = ["full"]}
walkdir = "2.3"
